| Summary: | ASTERISK-23671: PRESENCE_STATE write base64 option not working as intended | ||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |
| Date Opened: | 2014-04-25 10:28:43 | Date Closed: | 2014-05-16 13:07:27 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Functions/func_presencestate |
| Versions: | 12.2.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When using the PRESENCE_STATE() function to set the presence state of an entity and specifying the 'e' option, this is intended to indicate that you are passing in base64-encoded data. This data should be stored base64-encoded in the astdb, but the data should be decoded before being sent to consumers.
In Asterisk 12, it appears that when using the 'e' option, consumers are being sent base64-encoded data. This is likely due to the fact that the presence state events now have the presence data attached and the data is not having to be retrieved from the astdb. | ||
| Comments: | By: Mark Michelson (mmichelson) 2014-04-25 13:50:08.158-0500 I have removed the "regression" indication from this issue because after testing with Asterisk 11, it turns out that it behaved this way back then as well. For trunk, I am going to change the behavior and be sure to document it properly. By: Mark Michelson (mmichelson) 2014-04-25 16:38:03.256-0500 I have created a patch that is up for review at https://reviewboard.asterisk.org/r/3482/ | ||